# score-to-musicxml

./: .gitignore  CITATIONS.md  LICENSE  README.md  convert_score.py  convert_score.sh  pyproject.toml
.githooks/: pre-commit
score_to_musicxml/: __init__.py  errors.py  homr_runner.py  metadata.py  pdf.py  progress.py
score_to_musicxml/musicxml/: __init__.py  merge.py  rules.py
scripts/: check_musicxml_timing.py  install-git-hooks.sh  repair_musicxml.py
tests/: test_convert_score.py
