[project]
name = "score-to-musicxml"
version = "0.1.0"
description = "A lightweight PDF wrapper for homr."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "AGPL-3.0-only"
dependencies = [
    # Pin the exact PoC engine revision used for reproducible OCR output.
    "homr @ git+https://github.com/liebharc/homr.git@fabab4b0f8480be20d13686edf5f91d913ab00fd",
    # Cross-platform release for Intel/Apple Silicon macOS and x86_64/ARM64 Linux.
    "onnxruntime==1.23.2",
    # Use the non-GUI build in desktop and container environments.
    "opencv-python-headless==4.13.0.92",
    "pymupdf>=1.26,<2",
]

[tool.uv]
package = false
# Upstream currently declares >=1.24.1, although this homr revision runs with
# 1.23.2. Override it to retain a single reproducible cross-platform version;
# newer releases no longer provide an Intel macOS wheel.
#
# RapidOCR imports only the cv2 module used by both OpenCV distributions. Its
# metadata requires the GUI build, so disable that transitive requirement and
# provide the headless build explicitly above to avoid conflicting cv2 files.
override-dependencies = [
    "onnxruntime==1.23.2",
    "opencv-python; sys_platform == 'never'",
]

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["convert_score.py", "score_to_musicxml", "tests"]

[[tool.mypy.overrides]]
module = "pymupdf"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "PIE", "PL", "RUF", "S", "UP"]
ignore = [
    "PLR2004", # Small numeric constants are clearer inline in validation code.
    "S603", # subprocess receives a fixed argv list and never invokes a shell.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
